force-app/main/default/objects/SVMXC__ServiceMax_Config_Data__c/fields/SVMXC__Active__c.field-meta.xml
<CustomField>
    <fullName>SVMXC__Active__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Flag to indicate if the configuration data is active or inactive.</description>
    <inlineHelpText>Flag to indicate if the configuration data is active or inactive.</inlineHelpText>
    <label>Active</label>
    <type>Checkbox</type>
</CustomField>