force-app/main/default/objects/SVMXC__ServiceMax_Config_Data__c/fields/SVMXC__Dispatch_Process__c.field-meta.xml
<CustomField>
    <fullName>SVMXC__Dispatch_Process__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Internal use only</description>
    <label>Dispatch Process</label>
    <referenceTo>SVMXC__ServiceMax_Processes__c</referenceTo>
    <relationshipLabel>ServiceMax Config Data (Dispatch Process)</relationshipLabel>
    <relationshipName>ServiceMax_Config_Data</relationshipName>
    <type>Lookup</type>
</CustomField>