force-app/main/default/objects/SVMXC__ServiceMax_Config_Data__c/fields/SVMXC__Enable_Task__c.field-meta.xml
<CustomField>
    <fullName>SVMXC__Enable_Task__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Enable Task</label>
    <type>Checkbox</type>
</CustomField>