force-app/main/default/objects/SVMXC__ServiceMax_Config_Data__c/fields/SVMXC__Expression_Rule__c.field-meta.xml
<CustomField>
    <fullName>SVMXC__Expression_Rule__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Internal use only</description>
    <inlineHelpText>Expression Rule</inlineHelpText>
    <label>Expression Rule</label>
    <referenceTo>SVMXC__ServiceMax_Processes__c</referenceTo>
    <relationshipLabel>Rule Expressions</relationshipLabel>
    <relationshipName>ServiceMax_Config_Data2</relationshipName>
    <type>Lookup</type>
</CustomField>