force-app/main/default/objects/SVMXC__ServiceMax_Config_Data__c/fields/SVMXC__Expression_Type__c.field-meta.xml
<CustomField>
    <fullName>SVMXC__Expression_Type__c</fullName>
    <description>Internal use only</description>
    <label>Expression Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>INV_Header_Entry_Criteria</fullName>
            </value>
            <value>
                <fullName>INV_Line_Entry_Criteria</fullName>
            </value>
            <value>
                <fullName>INV_Header_Closure_Action</fullName>
            </value>
            <value>
                <fullName>INV_Line_Closure_Action</fullName>
            </value>
            <value>
                <fullName>INV_Related_Update_Action</fullName>
            </value>
            <value>
                <fullName>WORD_Parts_Required</fullName>
            </value>
            <value>
                <fullName>WORD_MTTS</fullName>
            </value>
            <value>
                <fullName>DISP_Process_Entry</fullName>
            </value>
            <value>
                <fullName>DISP_Simple_Assignment</fullName>
            </value>
            <value>
                <fullName>DISP_Priortization</fullName>
            </value>
            <value>
                <fullName>IPRD_Counters</fullName>
            </value>
            <value>
                <fullName>WORD_Territory</fullName>
            </value>
            <value>
                <fullName>SRCH_Object_Fields</fullName>
            </value>
            <value>
                <fullName>Fwd_Shipment_Entry_Criteria</fullName>
            </value>
            <value>
                <fullName>LKUP_Prefilter_Criteria</fullName>
            </value>
            <value>
                <fullName>WO_Auto_Entitlement</fullName>
            </value>
            <value>
                <fullName>Column Field</fullName>
            </value>
            <value>
                <fullName>Tech_Match</fullName>
            </value>
            <value>
                <fullName>Skill_Eligibility</fullName>
            </value>
            <value>
                <fullName>Tech_Eligibility</fullName>
            </value>
            <value>
                <fullName>Business_Rule</fullName>
            </value>
            <value>
                <fullName>LKUP_Criteria</fullName>
            </value>
            <value>
                <fullName>DISP_Capacity_Reservation</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>