force-app/main/default/objects/SVMXC__ServiceMax_Config_Data__c/fields/SVMXC__Field_Name__c.field-meta.xml
<CustomField>
    <fullName>SVMXC__Field_Name__c</fullName>
    <description>Salesforce API name of the field used in the expression</description>
    <label>Field Name</label>
    <length>100</length>
    <type>Text</type>
</CustomField>