force-app/main/default/objects/SVMXC__ServiceMax_Config_Data__c/fields/SVMXC__FKey_Name_Field__c.field-meta.xml
<CustomField>
    <fullName>SVMXC__FKey_Name_Field__c</fullName>
    <description>Salesforce API name of the Name-Field in the foreign key object</description>
    <label>Object Name Field</label>
    <length>100</length>
    <type>Text</type>
</CustomField>