force-app/main/default/objects/SVMXC__ServiceMax_Config_Data__c/fields/SVMXC__Formula__c.field-meta.xml
<CustomField>
    <fullName>SVMXC__Formula__c</fullName>
    <description>This is to store body/ definition of formula.</description>
    <label>Formula</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>