force-app/main/default/objects/SVMXC__ServiceMax_Config_Data__c/fields/SVMXC__Is_Name_Field__c.field-meta.xml
<CustomField>
    <fullName>SVMXC__Is_Name_Field__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Is Name Field?</label>
    <type>Checkbox</type>
</CustomField>