force-app/main/default/objects/SVMXC__ServiceMax_Config_Data__c/fields/SVMXC__Location__c.field-meta.xml
<CustomField>
    <fullName>SVMXC__Location__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Location of the next route stop</description>
    <label>Route Location</label>
    <referenceTo>SVMXC__Site__c</referenceTo>
    <relationshipLabel>ServiceMax Config Data</relationshipLabel>
    <relationshipName>ServiceMax_Config_Data</relationshipName>
    <type>Lookup</type>
</CustomField>