force-app/main/default/objects/SVMXC__ServiceMax_Config_Data__c/fields/SVMXC__MapID__c.field-meta.xml
<CustomField>
    <fullName>SVMXC__MapID__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Lookup to ServiceMax Process with Record type Object Mapping</description>
    <inlineHelpText>Select the Object Mapping record to which this field mapping belongs.</inlineHelpText>
    <label>Map ID</label>
    <referenceTo>SVMXC__ServiceMax_Processes__c</referenceTo>
    <relationshipLabel>ServiceMax Field Mappings</relationshipLabel>
    <relationshipName>SVMX_Config_Data2</relationshipName>
    <type>Lookup</type>
</CustomField>