force-app/main/default/objects/SVMXC__ServiceMax_Config_Data__c/fields/SVMXC__Period__c.field-meta.xml
<CustomField>
    <fullName>SVMXC__Period__c</fullName>
    <description>This field refers to type of duration for respective  Servicemax Config Data record.</description>
    <label>Period</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Daily</fullName>
            </value>
            <value>
                <fullName>Weekly</fullName>
            </value>
            <value>
                <fullName>Monthly</fullName>
            </value>
            <value>
                <fullName>Bi-Monthly</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>