force-app/main/default/objects/SVMXC__ServiceMax_Config_Data__c/fields/SVMXC__Profile__c.field-meta.xml
<CustomField>
    <fullName>SVMXC__Profile__c</fullName>
    <description>Enter the Profile Name, This will be used in Configuration Access.</description>
    <inlineHelpText>Enter the Profile Name, This will be used in Configuration Access.</inlineHelpText>
    <label>Profile</label>
    <length>255</length>
    <type>Text</type>
</CustomField>