force-app/main/default/objects/SVMXC__ServiceMax_Config_Data__c/fields/SVMXC__Search_Object_Field_Type__c.field-meta.xml
<CustomField>
    <fullName>SVMXC__Search_Object_Field_Type__c</fullName>
    <label>Search Object Field Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Search</fullName>
            </value>
            <value>
                <fullName>Result</fullName>
            </value>
            <value>
                <fullName>Bubble</fullName>
            </value>
            <value>
                <fullName>OrderBy</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>