force-app/main/default/objects/SVMXC__ServiceMax_Config_Data__c/fields/SVMXC__Service_Group__c.field-meta.xml
<CustomField>
    <fullName>SVMXC__Service_Group__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Service Team</label>
    <referenceTo>SVMXC__Service_Group__c</referenceTo>
    <relationshipLabel>ServiceMax Config Data</relationshipLabel>
    <relationshipName>ServiceMax_Config_Data</relationshipName>
    <type>Lookup</type>
</CustomField>