force-app/main/default/objects/SVMXC__ServiceMax_Config_Data__c/fields/SVMXC__SM_Files_Config__c.field-meta.xml
<CustomField>
    <fullName>SVMXC__SM_Files_Config__c</fullName>
    <description>Field to capture Salesforce Files configuration JSON</description>
    <inlineHelpText>Field to capture Salesforce Files configuration JSON</inlineHelpText>
    <label>Files Config</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>