force-app/main/default/objects/SVMXC__ServiceMax_Config_Data__c/fields/SVMXC__Target_Field_Name__c.field-meta.xml
<CustomField>
    <fullName>SVMXC__Target_Field_Name__c</fullName>
    <description>API Name for the Target Field, Used in Field Mapping.</description>
    <inlineHelpText>Enter the API Name for the Target Field in Field Mapping.</inlineHelpText>
    <label>Target Field Name</label>
    <length>150</length>
    <type>Text</type>
</CustomField>