force-app/main/default/objects/SVMXC__ServiceMax_Config_Data__c/fields/SVMXC__Territory__c.field-meta.xml
<CustomField>
    <fullName>SVMXC__Territory__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Territory</label>
    <referenceTo>SVMXC__Territory__c</referenceTo>
    <relationshipLabel>ServiceMax Config Data</relationshipLabel>
    <relationshipName>ServiceMax_Config_Data</relationshipName>
    <type>Lookup</type>
</CustomField>