force-app/main/default/objects/SVMXC__ServiceMax_Config_Data__c/fields/SVMXC__Unprocessed__c.field-meta.xml
<CustomField>
    <fullName>SVMXC__Unprocessed__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Unprocessed</label>
    <type>Checkbox</type>
</CustomField>