force-app/main/default/objects/SVMXC__ServiceMax_Config_Data__c/fields/SVMXC__User__c.field-meta.xml
<CustomField>
    <fullName>SVMXC__User__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Lookup to User.</description>
    <inlineHelpText>Select a User.</inlineHelpText>
    <label>User</label>
    <referenceTo>User</referenceTo>
    <relationshipName>SVMX_Config_Data</relationshipName>
    <type>Lookup</type>
</CustomField>