force-app/main/default/objects/SVMXC__ServiceMax_Config_Data__c/fields/SVMXC__Wizard_Layout_Column__c.field-meta.xml
<CustomField>
    <fullName>SVMXC__Wizard_Layout_Column__c</fullName>
    <label>Wizard Layout Column</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>