force-app/main/default/objects/SVMXC__ServiceMax_Config_Data__c/recordTypes/SVMXC__Applicable_Skills.recordType-meta.xml
<RecordType>
    <fullName>SVMXC__Applicable_Skills</fullName>
    <active>true</active>
    <label>Applicable Skills</label>
</RecordType>