force-app/main/default/objects/SVMXC__ServiceMax_Config_Data__c/recordTypes/SVMXC__Change_Order_Access.recordType-meta.xml
<RecordType>
    <fullName>SVMXC__Change_Order_Access</fullName>
    <active>true</active>
    <description>Profile assignments on Change Order Configuration</description>
    <label>Change Order Access</label>
</RecordType>