force-app/main/default/objects/SVMXC__ServiceMax_Config_Data__c/recordTypes/SVMXC__Configuration_Access.recordType-meta.xml
<RecordType>
    <fullName>SVMXC__Configuration_Access</fullName>
    <active>true</active>
    <description>Configuration Access</description>
    <label>Configuration Access</label>
</RecordType>