force-app/main/default/objects/SVMXC__ServiceMax_Config_Data__c/recordTypes/SVMXC__Configuration_Profile.recordType-meta.xml
<RecordType>
    <fullName>SVMXC__Configuration_Profile</fullName>
    <active>true</active>
    <description>Configuration Profile</description>
    <label>Configuration Profile</label>
</RecordType>