force-app/main/default/objects/SVMXC__ServiceMax_Config_Data__c/recordTypes/SVMXC__Expressions.recordType-meta.xml
<RecordType>
    <fullName>SVMXC__Expressions</fullName>
    <active>true</active>
    <description>Expressions</description>
    <label>Expressions</label>
</RecordType>