force-app/main/default/objects/SVMXC__ServiceMax_Config_Data__c/recordTypes/SVMXC__Field_Mapping.recordType-meta.xml
<RecordType>
    <fullName>SVMXC__Field_Mapping</fullName>
    <active>true</active>
    <description>Field Mapping</description>
    <label>Field Mapping</label>
</RecordType>