force-app/main/default/objects/SVMXC__ServiceMax_Config_Data__c/recordTypes/SVMXC__Field_Updates.recordType-meta.xml
<RecordType>
    <fullName>SVMXC__Field_Updates</fullName>
    <active>true</active>
    <description>Field Updates details defined as SFM Formulas.</description>
    <label>Field Updates</label>
</RecordType>