force-app/main/default/objects/SVMXC__ServiceMax_Config_Data__c/recordTypes/SVMXC__Fulfillment_Path.recordType-meta.xml
<RecordType>
    <fullName>SVMXC__Fulfillment_Path</fullName>
    <active>true</active>
    <description>Fulfillment Path</description>
    <label>Fulfillment Path</label>
</RecordType>