force-app/main/default/objects/SVMXC__ServiceMax_Config_Data__c/recordTypes/SVMXC__Inventory_Process_Step.recordType-meta.xml
<RecordType>
    <fullName>SVMXC__Inventory_Process_Step</fullName>
    <active>true</active>
    <description>Inventory Process Step (Not Used)</description>
    <label>Inventory Process Step (Not Used)</label>
</RecordType>