force-app/main/default/objects/SVMXC__ServiceMax_Config_Data__c/recordTypes/SVMXC__Mobile_Configuration.recordType-meta.xml
<RecordType>
    <fullName>SVMXC__Mobile_Configuration</fullName>
    <active>true</active>
    <description>Mobile Configuration</description>
    <label>Mobile Configuration</label>
</RecordType>