force-app/main/default/objects/SVMXC__ServiceMax_Config_Data__c/recordTypes/SVMXC__Offline_Profile.recordType-meta.xml
<RecordType>
    <fullName>SVMXC__Offline_Profile</fullName>
    <active>true</active>
    <description>Record type to define ServiceMax Offline Profiles</description>
    <label>Offline Profile</label>
</RecordType>