force-app/main/default/objects/SVMXC__ServiceMax_Config_Data__c/recordTypes/SVMXC__Route_Stops.recordType-meta.xml
<RecordType>
    <fullName>SVMXC__Route_Stops</fullName>
    <active>true</active>
    <description>Route Stops</description>
    <label>Route Stops</label>
</RecordType>