force-app/main/default/objects/SVMXC__ServiceMax_Config_Data__c/recordTypes/SVMXC__Schedule.recordType-meta.xml
<RecordType>
    <fullName>SVMXC__Schedule</fullName>
    <active>true</active>
    <description>Schedule</description>
    <label>Schedule</label>
</RecordType>