force-app/main/default/objects/SVMXC__ServiceMax_Config_Data__c/recordTypes/SVMXC__Schedule_Detail.recordType-meta.xml
<RecordType>
    <fullName>SVMXC__Schedule_Detail</fullName>
    <active>true</active>
    <description>Schedule Detail</description>
    <label>Schedule Detail</label>
</RecordType>