force-app/main/default/objects/SVMXC__ServiceMax_Config_Data__c/recordTypes/SVMXC__Search_Access.recordType-meta.xml
<RecordType>
    <fullName>SVMXC__Search_Access</fullName>
    <active>true</active>
    <description>Search Access</description>
    <label>Search Access</label>
</RecordType>