force-app/main/default/objects/SVMXC__ServiceMax_Config_Data__c/recordTypes/SVMXC__Service_Flow_Access.recordType-meta.xml
<RecordType>
    <fullName>SVMXC__Service_Flow_Access</fullName>
    <active>true</active>
    <description>Service Flow Access</description>
    <label>Service Flow Access</label>
</RecordType>