force-app/main/default/objects/SVMXC__ServiceMax_Config_Data__c/recordTypes/SVMXC__Setting_Value.recordType-meta.xml
<RecordType>
    <fullName>SVMXC__Setting_Value</fullName>
    <active>true</active>
    <description>Setting Value</description>
    <label>Setting Value</label>
</RecordType>