force-app/main/default/objects/SVMXC__ServiceMax_Config_Data__c/recordTypes/SVMXC__SF_Action_Parameter.recordType-meta.xml
<RecordType>
    <fullName>SVMXC__SF_Action_Parameter</fullName>
    <active>true</active>
    <description>Parameter for the Service Flow Action</description>
    <label>SF Action Parameter</label>
</RecordType>