force-app/main/default/objects/SVMXC__ServiceMax_Config_Data__c/recordTypes/SVMXC__SPM_Details.recordType-meta.xml
<RecordType>
    <fullName>SVMXC__SPM_Details</fullName>
    <active>true</active>
    <label>SPM Details</label>
</RecordType>