force-app/main/default/objects/SVMXC__ServiceMax_Config_Data__c/recordTypes/SVMXC__Timesheet_Access.recordType-meta.xml
<RecordType>
    <fullName>SVMXC__Timesheet_Access</fullName>
    <active>true</active>
    <description>Timesheet configuration access</description>
    <label>Timesheet Access</label>
</RecordType>