force-app/main/default/objects/SVMXC__ServiceMax_Config_Data__c/recordTypes/SVMXC__View_Access.recordType-meta.xml
<RecordType>
    <fullName>SVMXC__View_Access</fullName>
    <active>true</active>
    <description>View Access</description>
    <label>View Access</label>
</RecordType>