force-app/main/default/objects/SVMXC__ServiceMax_Config_Data__c/recordTypes/SVMXC__Wizard_Access.recordType-meta.xml
<RecordType>
    <fullName>SVMXC__Wizard_Access</fullName>
    <active>true</active>
    <description>Wizard Access</description>
    <label>Wizard Access</label>
</RecordType>