force-app/main/default/objects/SVMXC__ServiceMax_Config_Data__c/recordTypes/SVMXC__Wizard_Layout.recordType-meta.xml
<RecordType>
    <fullName>SVMXC__Wizard_Layout</fullName>
    <active>true</active>
    <description>Wizard Layout</description>
    <label>Wizard Layout</label>
</RecordType>